--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="/assets/New folder/profile1.png" alt="">
+        <img draggable="false" class="tilt" src="/assets/New folder/profile1.jpg" alt="">
     </div>
     <div class="content">
         <h3>I'm Satyam Gupta</h3>
@@ -96,7 +96,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="#" target="_blank" class="btn"><span>Resume</span>
+            <a href="assets/New folder/Satyam_Gupta_CV.pdf" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -357,12 +357,12 @@
       <img draggable="false" src="/assets/New folder/vbspu.jpg" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>VBSPU Jaunpur</h3>
+        <h3>E E-Commerce</h3>
         </div>
         <div class="desc">
-          <p>VBSPU Jaunpur</p>
+          <p>E-Commerce schoping-project</p>
           <div class="btns">
-           <a href="https://vbspu.ac.in/" class="btn" target="_blank" rel="noopener noreferrer">
+           <a href="https://ecommerce-schoping-project.netlify.app/" class="btn" target="_blank" rel="noopener noreferrer">
   <i class="fas fa-eye"></i> View
 </a>
 
@@ -372,15 +372,15 @@
       </div>
     </div>
     <div class="box tilt">
-      <img draggable="false" src="/assets/New folder/geecon.jpg" alt="" />
+      <img draggable="false" src="/assets/New folder/worldPopulation.jpg" alt="" />
       <div class="content">
         <div class="tag">
-        <h3>Geecon</h3>
+        <h3>World Population</h3>
         </div>
         <div class="desc">
-          <p>Geecon Systems Pvt. Ltd.</p>
+          <p>World Population</p>
           <div class="btns">
-           <a href="https://geeconsystems.com/" class="btn" target="_blank" rel="noopener noreferrer">
+           <a href="https://country-population-git-main-satyam-guptas-projects-5584efff.vercel.app/" class="btn" target="_blank" rel="noopener noreferrer">
   <i class="fas fa-eye"></i> View
 </a>
 
@@ -525,7 +525,7 @@
           <h3>Contact info</h3>
           <p> <i class="fas fa-phone"></i>+917705879297</p>
           <p> <i class="fas fa-envelope"></i>forsatyam2018@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Jaunpur Uttar Pradesh, India</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Sultanpur Uttar Pradesh, India</p>
           <div class="share">
   <a class="facebook" aria-label="Facebook" href="https://www.facebook.com/Satyam7705/" target="_blank" rel="noopener noreferrer">
     <i class="fab fa-facebook"></i>
