--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="desc">
           <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
           <div class="btns">
-            <a href="http://127.0.0.1:5500/index.html" class="btn" target="_blank" rel="noopener noreferrer">
+            <a href="https://697b291f37e06f00077e9a1d--satyam77.netlify.app/" class="btn" target="_blank" rel="noopener noreferrer">
   <i class="fas fa-eye"></i> View
 </a>
 
